--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:bookstoredb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:sqlite:bookDB.db
-spring.datasource.driver-class-name = org.sqlite.JDBC
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-spring.datasource.username = admin
-spring.datasource.password = admin
+
